# gasprombank

./: Makefile  README.md  pyproject.toml  setup.cfg
gasprombank/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
tests/: test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py  test_task_5.py  test_task_6.py
tests/date/: date_task_5.txt  file.csv  file_just_name_column.csv  task_6.json  task_6_Rows_empty.json
