[tool.poetry]
name = "gasprombank"
version = "0.1.0"
description = "Test task for Python Backend developer from Gazprombank."
authors = ["Alexandr Kositskiy <koso-96@mail.ru>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Other Audience",
    "License :: Aladdin Free Public License (AFPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [{ include = "gasprombank" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = "^2.7.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
